<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_event"
        android:id="@+id/update_event_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_start_date"
        android:id="@+id/update_event_date"
        android:layout_below="@+id/update_event_name"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_time"
        android:id="@+id/update_event_time"
        android:layout_below="@+id/update_event_date"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/update_event_time">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_update"
            android:layout_below="@+id/update_event_time"
            android:text="@string/update_temple_time"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_cancel"
            android:layout_below="@+id/update_event_time"
            android:layout_toRightOf="@+id/button_update"
            android:text="@string/cancel"/>
    </LinearLayout>

</RelativeLayout>